--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "cdk-workshop": "bin/cdk-workshop.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
+    "cdk-build": "tsc",
+    "cdk-watch": "tsc -w",
+    "cdk-clean": "tsc --build --clean",
     "test": "jest",
     "cdk": "cdk"
   },
@@ -21,9 +22,11 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-sns": "1.74.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.74.0",
-    "@aws-cdk/aws-sqs": "1.74.0",
-    "@aws-cdk/core": "1.74.0"
+    "@aws-cdk/aws-apigateway": "^1.75.0",
+    "@aws-cdk/aws-dynamodb": "^1.75.0",
+    "@aws-cdk/aws-lambda": "^1.75.0",
+    "@aws-cdk/core": "1.76.0",
+    "@types/aws-serverless-express": "^3.3.3",
+    "cdk-dynamo-table-viewer": "^3.1.2"
   }
 }
